2013-04-22 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.8.in, aprx-complex.conf.in, aprx.conf.in,
	  doc/aprx-manual.odt, doc/aprx-manual.pdf:
	    Change documentation wording around <beacon>.

	* config.c:
	    Fix myloc config parameter parsing.

	* beacon.c:
	    Every <beacon> group is now independent from each other.
	    If you define multiple <beacon> groups, they will be
	    running in parallel with their own scheduling.
	    Meaning that you can have different cycles, and defaults
	    at each.

	* all source files:
	    Change Copyright claim years to  2007-2013.

	* configure.in:
	    Auto-test for <netinet/sctp.h> header file.

2013-04-22 Geoffrey F4FXL <max@planetemax.com>

	* digipeater.c:
	    Recent rewrite of viafield tracking code forgot
	    to initialize it in many cases -- and Covarity
	    tool did not notice that :-(

2013-04-20 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprsis.c:
	    Preparing for new communication modes

	* parse_aprs.c:
	    Two condition expression goofups that were always
	    "false"

	* filter.c:
	    Match filter parsing with aprsc (issue found with
	    Covarity testing)

	* aprsis.c, aprx.c, aprx.h, aprxpolls.c, cellmalloc.c,
	  config.c, digipeater.c, dprsgw.c, filter.c, interface.c,
	  kiss.c, netax25.c, telemetry.c, ttyreader.c:
	    Covarity testing revealed unclear error cases, unnecessary
	    comparisons against NULL, and other mostly harmless things.
	    There is still a memory leak in interface.c configuration
	    parsing in error path -- but that is not a big deal.

	* digipeater.c:
	    Modified "fixall" processing to put transmitter
	    callsign into first VIA field in every case,
	    possibly truncating the VIA list in order to make
	    room for the callsign in the incoming request.
	    Replacing numeric literals with #define constants
	    to inline document of what is going on at places.

2013-04-18 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, VERSION: